--- a/Pandora.Application/Pandora.Application.csproj
+++ b/Pandora.Application/Pandora.Application.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Pandora.Domain\Pandora.Domain.csproj" />
   </ItemGroup>
 
