--- a/Pandora/appsettings.json
+++ b/Pandora/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "PandoraCnn": "Server =.; Database=Pandora ;User Id =sa;Password=1; MultipleActiveResultSets=true"
   },
+  "AppSettings": {
+    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SODOCO, IT CAN BE ANY SODOCO"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
