migration to MySql

--- a/Pandora/appsettings.json
+++ b/Pandora/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PandoraCnn": "Server =GIG001P10397\\KARIMI; Database=Pandora ;User Id =sa;Password=1; MultipleActiveResultSets=true"
+    "PandoraCnn": "server=127.0.0.1;user=sa;password=123456;database=Pandora"
   },
   "AppSettings": {
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SODOCO, IT CAN BE ANY SODOCO"
