--- a/Pandora/appsettings.Development.json
+++ b/Pandora/appsettings.Development.json
@@ -1,4 +1,10 @@
 {
+  "ConnectionStrings": {
+    "MYSQL_ROOT_PASSWORD": 123456,
+    "MYSQL_PASSWORD": 123456,
+    "MYSQL_USER": "sa",
+    "MYSQL_DATABASE": "Pandora"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
