--- a/Pandora.Application/Pandora.Application.csproj
+++ b/Pandora.Application/Pandora.Application.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Quartz" Version="3.3.3" />
     <PackageReference Include="Selenium.Chrome.WebDriver" Version="85.0.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.0.0" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="103.0.5060.5300" />
   </ItemGroup>
 
   <ItemGroup>
