--- a/Pandora/appsettings.json
+++ b/Pandora/appsettings.json
@@ -1,6 +1,9 @@
 {
   "ConnectionStrings": {
-    "PandoraCnn": "server=127.0.0.1;user=sa;password=123456;database=Pandora"
+    "MYSQL_ROOT_PASSWORD": "123456",
+    "MYSQL_PASSWORD": "123456",
+    "MYSQL_USER": "sa",
+    "MYSQL_DATABASE": "Pandora"
   },
   "AppSettings": {
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SODOCO, IT CAN BE ANY SODOCO"
